<resources>
    <string name="app_name">App Filter</string>
    <string name="filter">Filter</string>
    <string name="settings">Settings</string>
    <string name="sort_by">Sort by</string>
    <string name="is">is</string>
    <string name="not">not</string>
    <string name="and">and</string>
    <string name="or">or</string>
    <string name="true_or_false">True or false</string>
    <string name="text">Text</string>
    <string name="number">Number</string>
    <string name="save">Save</string>
    <string name="Days">Days</string>
    <string name="Hours">Hours</string>
    <string name="Minutes">Minutes</string>
    <string name="Seconds">Seconds</string>
    <string name="digitsOnly">Digits only</string>
    <string name="tooBig">Too big</string>
</resources>