<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp">

    <ToggleButton
        android:id="@+id/btNot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/is"
        android:textOn="@string/not"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/btCombination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/or"
        android:textOn="@string/and"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/ivAdd"
        app:layout_constraintTop_toBottomOf="@id/btNot"
        app:layout_constraintVertical_bias="0"
        tools:itemCount="3"
        tools:listitem="@layout/item_simple_condition" />

    <ImageButton
        android:id="@+id/ivAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>